shared-business-logics/services/transaction-orchestration/Backend/Java/status-broadcast-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: status-broadcast-service
  namespace: transaction-orchestration
  labels:
    app: status-broadcast-service
    team: team-b-transaction
spec:
  type: ClusterIP
  selector:
    app: status-broadcast-service
  ports:
  - name: http
    port: 8084
    targetPort: 8084
    protocol: TCP
  sessionAffinity: None
